AppCompat Check Box added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="open_drawer">Open Drawer</string>
     <string name="close_drawer">Close Drawer</string>
     <string name="switch_compat">Switch Compat</string>
+    <string name="check_box">Check Box</string>
 </resources>
