--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="close_drawer">Close Drawer</string>
     <string name="switch_compat">Switch Compat</string>
     <string name="check_box">Check Box</string>
+    <string name="radio_button_1">Radio Button 1</string>
+    <string name="radio_button_2">Radio Button 2</string>
+    <string name="radio_button_3">Radio Button 3</string>
+
 </resources>
